--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Divya Portfolio"/>
+    <meta name="description" content="Harsha Portfolio"/>
     <title>Gorle's Portfolio</title>
     <link rel="stylesheet" href="index.css">
   </head>
